--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tenis23</title>
+    <meta name="description" content="Tenis23 es tu tienda de indumentaria y accesorios de tenis. Encontra raquetas, zapatillas, pantalones, remeras y mas. Marcas top a precios accesibles. Envios a todo el pais y maxima seguridad en el pago. ¡Compra ahora y mejora tu nivel de juego!">
+    <meta name="keywords" content="Tenis23, tenis, remeras, pantalon, raqueta, pelota, zapatillas, ladrillo, cemento, cesped">
+    <link rel="shortcut icon" href="../img/pelotatenis.png" type="image/x-icon">
+    <title>Tenis23| indumentaria de tenis</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -56,7 +59,7 @@
             </section>
                 <section class="cosas">
                     <div>
-                        <img src="../img/remerababolat.jpg" alt="remera babolat negra">
+                        <img src="../img/remerababolat.jpg" alt="remera babolat negra con letras blancas">
                         <p>Remera Babolat</p>
                         <a href="">Comprar</a>
                     </div>
