--- a/index.html
+++ b/index.html
@@ -30,9 +30,6 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Locales</a>
-                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
@@ -83,15 +80,13 @@
     </main>
     <footer class="pie">
         <h2>Tenis23</h2>
-        <ul>
-            <li>Envios</li>
-            <li>Contacto</li>
-            <li>Quienes somos</li>
-        </ul>
-        <div>
-            <a href="https://www.facebook.com" target="_blank"><img src="./img/facebook.png" alt=""></a>
-            <a href="https://www.instagram.com" target="_blank"><img src="./img/instagram.png" alt=""></a>
-            <a href="https://www.whatsapp.com" target="_blank"><img src="./img/social.png" alt=""></a>
+        <div class="caja">
+        <div class="cuadrado">
+        <div class="texto"><b>6 cuotas sin interes</b></div>
+        </div>
+        </div>
+        <div class="seguimiento">
+            <a href="https://www.oca.com.ar/Seguimiento/BuscarEnvio/paquetes">Seguimiento de envios</a>
         </div>
     </footer>
 </body>
