--- a/pages/calzado.html
+++ b/pages/calzado.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="../img/pelotatenis.png" type="image/x-icon">
     <title>Tenis23| zapatillas deportivas de tenis</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
     <header>
@@ -66,19 +66,15 @@
                 </section>
         </main>
 
-
-    
         <footer class="pie">
             <h2>Tenis23</h2>
-            <ul>
-                <li>Envios</li>
-                <li>Contacto</li>
-                <li>Quienes somos</li>
-            </ul>
-            <div>
-                <a href="https://www.facebook.com" target="_blank"><img src="../img/facebook.png" alt=""></a>
-                <a href="https://www.instagram.com" target="_blank"><img src="../img/instagram.png" alt=""></a>
-                <a href="https://www.whatsapp.com" target="_blank"><img src="../img/social.png" alt=""></a>
+            <div class="caja">
+            <div class="cuadrado">
+            <div class="texto"><b>6 cuotas sin interes</b></div>
+            </div>
+            </div>
+            <div class="seguimiento">
+                <a href="https://www.oca.com.ar/Seguimiento/BuscarEnvio/paquetes">Seguimiento de envios</a>
             </div>
         </footer>
 </body>
