--- a/pages/bolsos.html
+++ b/pages/bolsos.html
@@ -28,7 +28,7 @@
                             <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Locales</a>
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -60,6 +60,16 @@
                     <div>
                         <img src="../img/bolsowilson.webp" alt="bolso wilson negro con letras blancas">
                         <p>Bolso Wilson Chicago</p>
+                        <a href="">Comprar</a>
+                    </div>
+                    <div>
+                        <img src="../img/bolsoadidas.webp" alt="bolso adidas negro con letras blancas">
+                        <p>Bolso Adidas</p>
+                        <a href="">Comprar</a>
+                    </div>
+                    <div>
+                        <img src="../img/bolsoeverlast.jpeg" alt="bolso everlast negro con letras blancas">
+                        <p>Bolso Everlast</p>
                         <a href="">Comprar</a>
                     </div>
                 </section>
