--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -28,7 +28,7 @@
                             <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Locales</a>
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -61,6 +61,16 @@
                     <div>
                         <img src="../img/remerababolat.jpg" alt="remera babolat negra con letras blancas">
                         <p>Remera Babolat</p>
+                        <a href="">Comprar</a>
+                    </div>
+                    <div>
+                        <img src="../img/remerahead.jpg" alt="remera head negra con letras blancas">
+                        <p>Remera Head</p>
+                        <a href="">Comprar</a>
+                    </div>
+                    <div>
+                        <img src="../img/remerawilson.jpg" alt="remera wilson negra con letras blancas">
+                        <p>Remera Wilson</p>
                         <a href="">Comprar</a>
                     </div>
                 </section>
