--- a/pages/raquetas.html
+++ b/pages/raquetas.html
@@ -28,7 +28,7 @@
                             <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Locales</a>
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -61,6 +61,16 @@
                     <div>
                         <img src="../img/raquetawilsonop.webp" alt="raqueta wilson con marco negro y amarillo">
                         <p>Raqueta Wilson</p>
+                        <a href="">Comprar</a>
+                    </div>
+                    <div>
+                        <img src="../img/raquetababolat.jpg" alt="raqueta babolat azul">
+                        <p>Raqueta Babolat</p>
+                        <a href="">Comprar</a>
+                    </div>
+                    <div>
+                        <img src="../img/raquetahead.jpg" alt="raqueta head verde">
+                        <p>Raqueta Head</p>
                         <a href="">Comprar</a>
                     </div>
                 </section>
