--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Tenis23 es tu tienda de indumentaria y accesorios de tenis. Encontra raquetas, zapatillas, pantalones, remeras y mas. Marcas top a precios accesibles. Envios a todo el pais y maxima seguridad en el pago. ¡Compra ahora y mejora tu nivel de juego!">
     <meta name="keywords" content="Tenis23, tenis, remeras, pantalon, raqueta, pelota, zapatillas, ladrillo, cemento, cesped">
     <link rel="shortcut icon" href="../img/pelotatenis.png" type="image/x-icon">
-    <title>Tenis23| zapatillas deportivas de tenis</title>
+    <title>Tenis23| bolsos deportivos para tenis</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
@@ -28,7 +28,7 @@
                             <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./contacto.html">Contacto</a>
+                            <a class="nav-link" href="#">Contacto</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -50,42 +50,53 @@
                 </div>
             </div>
         </nav>
-        </header>
+    </header>
+<main>
+    <section class="contenedor-mapa">
+    <div class="mapa">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.5530202100827!2d-73.84945252517993!3d40.749859935298936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25fd945137c79%3A0x6045c9d270878f21!2sArthur%20Ashe%20Stadium!5e0!3m2!1ses-419!2sar!4v1725325959968!5m2!1ses-419!2sar" width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <div>
+        <form class="formulario">
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" name="nombre">
+            <label for="email">Correo electrónico:</label>
+            <input type="email" id="email" name="email">
+            <label for="mensaje">Mensaje:</label>
+            <textarea id="mensaje" name="mensaje"></textarea>
+            <button type="submit">Enviar</button>
+        </form>
+    </div>
+    </section>
 
 
-        <main>
-            <section class="cosas-titulo">
-            <h2>Calzado</h2>
-            </section>
-                <section class="cosas">
-                    <div>
-                        <img src="../img/zapatillas.jpg" alt="zapatillas lacoste blancas">
-                        <p>Zapatillas Lacoste</p>
-                        <a href="">Comprar</a>
-                    </div>
-                    <div>
-                        <img src="../img/zapatillasadidas.jpg" alt="zapatillas adidas blancas con logo azul">
-                        <p>Zapatillas Adidas</p>
-                        <a href="">Comprar</a>
-                    </div>
-                    <div>
-                        <img src="../img/zapatillasacsis.jpg" alt="zapatillas asics negras">
-                        <p>Zapatillas Asics</p>
-                        <a href="">Comprar</a>
-                    </div>
-                </section>
-        </main>
 
-        <footer class="pie">
-            <h2>Tenis23</h2>
-            <div class="caja">
-            <div class="cuadrado">
-            <div class="texto"><b>6 cuotas sin interes</b></div>
-            </div>
-            </div>
-            <div class="seguimiento">
-                <a href="https://www.oca.com.ar/Seguimiento/BuscarEnvio/paquetes">Seguimiento de envios</a>
-            </div>
-        </footer>
+</main>
+
+<footer class="pie">
+    <h2>Tenis23</h2>
+    <div class="caja">
+    <div class="cuadrado">
+    <div class="texto"><b>6 cuotas sin interes</b></div>
+    </div>
+    </div>
+    <div class="seguimiento">
+        <a href="https://www.oca.com.ar/Seguimiento/BuscarEnvio/paquetes">Seguimiento de envios</a>
+    </div>
+</footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
